--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body {
     border-radius: 15px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
     text-align: center;
-    flex: 2;
+    width: 60%; /* Ortalama görünüm için sabit genişlik */
+    flex-grow: 1;
 }
 
 .incorrect-words-box {
@@ -70,6 +71,10 @@ body {
     color: #f44336;
 }
 
+.button-container {
+    margin-top: 20px;
+}
+
 .action-button {
     width: 100%;
     padding: 10px;
@@ -77,7 +82,7 @@ body {
     border: none;
     border-radius: 8px;
     cursor: pointer;
-    margin-top: 10px;
+    margin-bottom: 10px;
     transition: background-color 0.3s ease;
 }
 
